--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -3,3 +3,4 @@ FROM docker.elastic.co/elasticsearch/elasticsearch-oss:6.0.0
 
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
